--- a/.github/workflows/SkyHawk-SHRP.yml
+++ b/.github/workflows/SkyHawk-SHRP.yml
@@ -56,6 +56,7 @@ on:
         - system/bin/android.hardware.gatekeeper@1.0-service-qti
         - system/bin/android.hardware.keymaster@4.0-service-qti
         - system/bin/android.hardware.keymaster@4.1-service-qti
+        - system/bin/android.hardware.keymaster@4.1-service.trustonic
 
 jobs:
   build:
