--- a/.github/workflows/OrangeFox-OFRP.yml
+++ b/.github/workflows/OrangeFox-OFRP.yml
@@ -106,6 +106,19 @@ jobs:
         set +e
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
+        export OF_USE_LZ4_COMPRESSION=1
+        export FOX_EXCLUDE_NANO_EDITOR=1
+        export FOX_REMOVE_BASH=1
+        export FOX_REPLACE_TOOLBOX_GETPROP=1
+        export FOX_AB_DEVICE=1
+        export OF_MAINTAINER=Aks-Brar
+        export OF_TWRP_COMPATIBILITY_MODE=1
+        export FOX_VIRTUAL_AB_DEVICE=1
+        export  OF_FIX_DECRYPTION_ON_DATA_MEDIA=1
+        export FOX_EXCLUDE_NANO_EDITOR=1
+        export FOX_NO_SAMSUNG_SPECIAL=1
+        export FOX_REMOVE_AAPT=1
+        export OF_NO_ADDITIONAL_MIUI_PROPS_CHECK=1
         set -e
         ${{ steps.fox_branch.outputs.value }}
 
