--- a/.github/workflows/OrangeFox-OFRP.yml
+++ b/.github/workflows/OrangeFox-OFRP.yml
@@ -106,6 +106,12 @@ jobs:
         set +e
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
+        export FOX_REMOVE_AAPT=1
+        export FOX_REMOVE_BUSYBOX_BINARY=1
+        export FOX_USE_GREP_BINARY=0
+        export FOX_USE_XZ_UTILS=0
+        export FOX_USE_SED_BINARY=0
+        export FOX_USE_TAR_BINARY=0
         set -e
         ${{ steps.fox_branch.outputs.value }}
 
