--- a/.github/workflows/OrangeFox-OFRP.yml
+++ b/.github/workflows/OrangeFox-OFRP.yml
@@ -112,6 +112,11 @@ jobs:
         export FOX_USE_XZ_UTILS=0
         export FOX_USE_SED_BINARY=0
         export FOX_USE_TAR_BINARY=0
+        export OF_VANILLA_BUILD=1
+        export OF_NO_SAMSUNG_SPECIAL
+        export FOX_DRASTIC_SIZE_REDUCTION
+        export FOX_REMOVE_BASH
+        export FOX_REPLACE_BUSYBOX_PS
         set -e
         ${{ steps.fox_branch.outputs.value }}
 
@@ -120,6 +125,7 @@ jobs:
         echo "BUILD_DATE=$(TZ=Asia/Manila date +%Y%m%d)" >> $GITHUB_ENV
 
     - name: Check if Recovery Exist
+    
       run: |
         cd ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}
         if [ -f out/target/product/${{ github.event.inputs.DEVICE_NAME }}/OrangeFox*.img ]; then
