--- a/.github/workflows/OrangeFox-OFRP.yml
+++ b/.github/workflows/OrangeFox-OFRP.yml
@@ -112,7 +112,7 @@ jobs:
         export FOX_USE_XZ_UTILS=0
         export FOX_USE_SED_BINARY=0
         export FOX_USE_TAR_BINARY=0
-        export OF_VANILLA_BUILD=1
+        export FOX_VANILLA_BUILD=1
         export OF_NO_SAMSUNG_SPECIAL=1
         export FOX_DRASTIC_SIZE_REDUCTION=1
         export FOX_REMOVE_BASH=1
