--- a/.github/workflows/OrangeFox-OFRP.yml
+++ b/.github/workflows/OrangeFox-OFRP.yml
@@ -106,6 +106,24 @@ jobs:
         set +e
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
+        export FOX_REMOVE_AAPT=1
+        export FOX_REMOVE_BUSYBOX_BINARY=1
+        export FOX_USE_GREP_BINARY=0
+        export FOX_USE_XZ_UTILS=0
+        export FOX_USE_SED_BINARY=0
+        export FOX_USE_TAR_BINARY=0
+        export OF_FLASHLIGHT_ENABLE=1
+        export OF_NO_SAMSUNG_SPECIAL=1
+        export FOX_DRASTIC_SIZE_REDUCTION=1
+        export FOX_REMOVE_BASH=1
+        export FOX_REPLACE_BUSYBOX_PS=1
+        export OF_FL_PATH1="/sys/class/leds/mt-flash-led1"
+        export OF_FL_PATH1="/sys/class/leds/mt-flash-led2"
+        export FOX_EXCLUDE_NANO_EDITOR=1
+        export FOX_REMOVE_ZIP_BINARY=1
+        export OF_MAINTAINER="AKS BRAR"
+        export FOX_EXTREME_SIZE_REDUCTION=1
+
         set -e
         ${{ steps.fox_branch.outputs.value }}
 
