--- a/.github/workflows/OrangeFox-OFRP.yml
+++ b/.github/workflows/OrangeFox-OFRP.yml
@@ -121,6 +121,8 @@ jobs:
         export FOX_REMOVE_ZIP_BINARY=1
         export OF_MAINTAINER="AKS BRAR"
         export FOX_EXTREME_SIZE_REDUCTION=1
+        export OF_STATUS_H=144
+        export OF_SCREEN_H=2400
         set -e
         ${{ steps.fox_branch.outputs.value }}
 
