--- a/.github/workflows/OrangeFox-OFRP.yml
+++ b/.github/workflows/OrangeFox-OFRP.yml
@@ -112,7 +112,6 @@ jobs:
         export FOX_USE_XZ_UTILS=0
         export FOX_USE_SED_BINARY=0
         export FOX_USE_TAR_BINARY=0
-        export OF_FLASHLIGHT_ENABLE=0
         export OF_NO_SAMSUNG_SPECIAL=1
         export FOX_DRASTIC_SIZE_REDUCTION=1
         export FOX_REMOVE_BASH=1
@@ -124,6 +123,8 @@ jobs:
         export OF_STATUS_H=10
         export OF_SCREEN_H=2400
         export OF_FIX_DECRYPTION_ON_DATA_MEDIA=1
+        export OF_FL_PATH1="/sys/class/flashlight/mt-flash-led1"
+        export OF_FL_PATH1="/sys/class/flashlight/mt-flash-led2"
         set -e
         ${{ steps.fox_branch.outputs.value }}
 
@@ -164,13 +165,13 @@ jobs:
           MD5 (img): ${{ env.MD5_IMG }}
           MD5 (zip): ${{ env.MD5_ZIP }}
           
-    - name: Run LDCheck
-      if: github.event.inputs.LDCHECK == 'true'
-      run: |
-        cd tools
-        mv -n libneeds ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery/root/
-        mv -n ldcheck ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery/root/
-        cd ../OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery/root
-        python3 ldcheck -p system/lib64:vendor/lib64:system/lib:vendor/lib -d ${{ github.event.inputs.LDCHECKPATH }}
-        echo "Done checking missing dependencies. Review, and reconfigure your tree."
-      continue-on-error: true
+ #   - name: Run LDCheck
+ #     if: github.event.inputs.LDCHECK == 'true'
+ #     run: |
+ #       cd tools
+ #       mv -n libneeds ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery/root/
+ #       mv -n ldcheck ${GITHUB_WORKSPACE}/OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery/root/
+ #       cd ../OrangeFox/fox_${{ github.event.inputs.MANIFEST_BRANCH }}/out/target/product/${{ github.event.inputs.DEVICE_NAME }}/recovery/root
+ #       python3 ldcheck -p system/lib64:vendor/lib64:system/lib:vendor/lib -d ${{ github.event.inputs.LDCHECKPATH }}
+ #       echo "Done checking missing dependencies. Review, and reconfigure your tree."
+ #     continue-on-error: true
